--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>drum set</title>
+    <link rel="stylesheet" type="text/css" href="./src/css/main.css" />
   </head>
   <body>
-
+    <div class="container">
+<!--  with only the container, nothing showed up.  literally only had body and one div with a class of container.  Width was 100%, height auto, display block, background color: black.  But nothing showed.  Then put in p tag with text and it showed.  Lesson 1: container has to have something inside it to showl.-->
+<!--  I couldn't get my color to show in the background.  I hadn't put my script tag in yet with the CSS.  Lesson 2: CSS doesn't work unless it's connected with a script tag.-->
+<!--  I forgot how to out script tags in.  They go in the head with a link rel.  Lesson 3: Css tags are link rels in the head.-->
+<!--  I put the link in, but didn't show.  Had to double check the path.  Lesson 4: make sure file paths are correct.-->
+<!--  I finally got it to work when I added my src in the directory path.  Lesson 5: don't think it will work because it looks like it should work.  Know what you are seeing, versus think you know what you are seeing.  Understand the problem-->
+      <p>text</p>
+    </div>
   </body>
 </html>
