WIP get background image to show

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <!--  I forgot how to out script tags in.  They go in the head with a link rel.  Lesson 3: Css tags are link rels in the head.-->
 <!--  I put the link in, but didn't show.  Had to double check the path.  Lesson 4: make sure file paths are correct.-->
 <!--  I finally got it to work when I added my src in the directory path.  Lesson 5: don't think it will work because it looks like it should work.  Know what you are seeing, versus think you know what you are seeing.  Understand the problem-->
+<!--  I wanted to add a background image.  I had to look at the syntax.  I know atom autocompleted background-image:url(). I knew I had to put the src file path in there, but I didn't know if it needed quotes.  Lesson 6: it's needs quotes.  background-image:url("./src/img/photo.jpeg") -->
+<!--  I couldn't get my css to show a background image.  So to test it I commented out the background-image and changed it to background-color. The color showed.  This tells me that the html is forming the elements and they have width and height.  So they probably are having a problem getting the images to render. I took the "-" out of the name.  That didn't do anything.-->
       <p>text</p>
     </div>
   </body>
