WIP fixing background image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="container">
+      hello world
 <!--  with only the container, nothing showed up.  literally only had body and one div with a class of container.  Width was 100%, height auto, display block, background color: black.  But nothing showed.  Then put in p tag with text and it showed.  Lesson 1: container has to have something inside it to showl.-->
 <!--  I couldn't get my color to show in the background.  I hadn't put my script tag in yet with the CSS.  Lesson 2: CSS doesn't work unless it's connected with a script tag.-->
 <!--  I forgot how to out script tags in.  They go in the head with a link rel.  Lesson 3: Css tags are link rels in the head.-->
