--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 <!--  I finally got it to work when I added my src in the directory path.  Lesson 5: don't think it will work because it looks like it should work.  Know what you are seeing, versus think you know what you are seeing.  Understand the problem-->
 <!--  I wanted to add a background image.  I had to look at the syntax.  I know atom autocompleted background-image:url(). I knew I had to put the src file path in there, but I didn't know if it needed quotes.  Lesson 6: it's needs quotes.  background-image:url("./src/img/photo.jpeg") -->
 <!--  I couldn't get my css to show a background image.  So to test it I commented out the background-image and changed it to background-color. The color showed.  This tells me that the html is forming the elements and they have width and height.  So they probably are having a problem getting the images to render. I took the "-" out of the name.  That didn't do anything. I then noticed that I had written background-image: image() instead of background-image:url().  Lesson 7: spelling matters!  Still didn't work, but chrome was now showing that it was being applied.  Read some more.  Found out lesson 8: if it is on a server you have to make sure the permissions (read, write, etc.) will let it show.  Finally got it to show.  Lesson 8: The file had to be a relative path from the CSS file that was defining it, not the html file.-->
+<!--  .container {  This finally got it to show up...
+
+  width: 200px;
+  height: 200px;
+  display: block;
+  position: absolute;
+  background-image: url("../img/70222.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: red;
+}-->
 
     </div>
   </body>
