add media file and change background image to body

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 }-->
 
   <div class="middle_row">
+    <div class="controller left">
+
+    </div>
+    <div class="controller right">
+
+    </div>
   </div>
   </body>
 </html>
