--- a/index.html
+++ b/index.html
@@ -36,3 +36,16 @@
   </div>
   </body>
 </html>
+
+<audio data-key="65" src="audio/clap.wav"></audio>
+<!--  what are the attributes of data? What are the data and how are they used?  why is 65 in quotes? -->
+<audio data-key="65" src="audio/clap.wav"></audio>
+<audio data-key="83" src="audio/hihat.wav"></audio>
+<audio data-key="68" src="audio/kick.wav"></audio>
+<audio data-key="70" src="audio/openhat.wav"></audio>
+<audio data-key="71" src="audio/boom.wav"></audio>
+<audio data-key="72" src="audio/ride.wav"></audio>
+<audio data-key="74" src="audio/snare.wav"></audio>
+<audio data-key="75" src="audio/tom.wav"></audio>
+<audio data-key="76" src="audio/tink.wav"></audio>
+<!--  how do you find out what key is associated to which number on the keyboard?-->
