fix relative path to sounds

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 <audio data-key="65" src="audio/clap.wav"></audio>
 <!--  what are the attributes of data? What are the data and how are they used?  why is 65 in quotes? -->
-<audio data-key="65" src="audio/clap.wav"></audio>
-<audio data-key="83" src="audio/hihat.wav"></audio>
-<audio data-key="68" src="audio/kick.wav"></audio>
-<audio data-key="70" src="audio/openhat.wav"></audio>
-<audio data-key="71" src="audio/boom.wav"></audio>
-<audio data-key="72" src="audio/ride.wav"></audio>
-<audio data-key="74" src="audio/snare.wav"></audio>
-<audio data-key="75" src="audio/tom.wav"></audio>
-<audio data-key="76" src="audio/tink.wav"></audio>
+<audio data-key="65" src="./src/sounds/clap.wav"></audio>
+<audio data-key="83" src="./src/sounds/hihat.wav"></audio>
+<audio data-key="68" src="./src/sounds/kick.wav"></audio>
+<audio data-key="70" src="./src/sounds/openhat.wav"></audio>
+<audio data-key="71" src="./src/sounds/boom.wav"></audio>
+<audio data-key="72" src="./src/sounds/ride.wav"></audio>
+<audio data-key="74" src="./src/sounds/snare.wav"></audio>
+<audio data-key="75" src="./src/sounds/tom.wav"></audio>
+<audio data-key="76" src="./src/sounds/tink.wav"></audio>
 <!--  how do you find out what key is associated to which number on the keyboard?-->
