add script tags

--- a/index.html
+++ b/index.html
@@ -49,3 +49,7 @@
 <audio data-key="75" src="./src/sounds/tom.wav"></audio>
 <audio data-key="76" src="./src/sounds/tink.wav"></audio>
 <!--  how do you find out what key is associated to which number on the keyboard?-->
+
+<script>
+
+</script>
