add event listener

--- a/index.html
+++ b/index.html
@@ -51,5 +51,7 @@
 <!--  how do you find out what key is associated to which number on the keyboard?-->
 
 <script>
+  window.addEventListener(keydown, function (e) {
 
+  })
 </script>
