add query selector

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 
 <script>
   window.addEventListener(keydown, function (e) {
-
+    let audio = document.querySelector('audio[data-key="${e.keyCode}"']);
   })
 </script>
